--- a/system/src/main/resources/templates/rms/index.html
+++ b/system/src/main/resources/templates/rms/index.html
@@ -6,7 +6,6 @@
     <title>User Login | Steam RMS</title>
     <!-- Favicon Icon -->
     <link href="resources/images/icon-sq.png" rel="icon" type="image/png">
-    <link href="resources/css/custom.css" rel="stylesheet">
     <!-- Bootstrap CSS file-->
     <link href="resources/bootstrap-5.2.3/css/bootstrap.min.css" rel="stylesheet">
     <!-- Jquery Js File -->
@@ -15,7 +14,7 @@
     <script src="resources/bootstrap-5.2.3/js/bootstrap.bundle.js"></script>
     <!-- Fontawesome Js Plug-in -->
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/07941f149f.js"></script>
-
+    <link href="resources/css/customRMS.css" rel="stylesheet">
 </head>
 <body>
 <div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
