--- a/system/src/main/resources/templates/rms/index.html
+++ b/system/src/main/resources/templates/rms/index.html
@@ -21,7 +21,7 @@
     <div class="custom-login-form-container">
         <div class="container-fluid text-center p-2">
             <a href="/"><img class="w-25 mb-2" src="resources/images/logo-sq.png" alt="logo"></a>
-            <h3 class="text-dark fw-bold">STUDENT REGISTRATION</h3>
+            <h3 class="text-dark fw-bold">Registration Management System</h3>
         </div>
         <div class="custom-login-form mt-2 p-2 rounded-3">
             <div class="login-card p-2">
