--- a/system/src/main/resources/templates/index.html
+++ b/system/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
         scale: 1.00,
         scaleMobile: 1.00,
         color: 0x989090,
-        shininess: 5.00
+        shininess: 5.00,
 
 
     })
