--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -22,7 +22,7 @@
     <script src="resources/chosen-1.8.7/chosen.jquery.min.js" type="text/javascript"></script>
     <link href="resources/chosen-1.8.7/chosen.min.css" rel="stylesheet" type="text/css">
     <!-- Custom CSS File-->
-    <link href="resources/css/custom.css" rel="stylesheet">
+    <link href="resources/css/customCRM.css" rel="stylesheet">
 </head>
 <body>
 <!-- Nav Bar Start -->
@@ -320,7 +320,7 @@
 
 
 <script src="resources/js/external-validator.js" type="text/javascript"></script>
-<script src="inquiries.js" type="text/javascript"></script>
+<script src="resources/js/CRM/inquiries.js" type="text/javascript"></script>
 
 </body>
 </html>
