new images added

--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -5,24 +5,24 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
     <title>Inquiries | STEAM CRM</title>
     <!-- Favicon Icon -->
-    <link href="resources/images/icon-sq.png" rel="icon" type="image/png">
+    <link href="/resources/images/icon-sq.png" rel="icon" type="image/png">
     <!-- Bootstrap CSS File-->
-    <link href="resources/bootstrap-5.2.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/resources/bootstrap-5.2.3/css/bootstrap.min.css" rel="stylesheet">
     <!-- Jquery Js File -->
-    <script src="resources/Jquery/jquery.min.js"></script>
+    <script src="/resources/Jquery/jquery.min.js"></script>
     <!-- Boostrap Js File -->
-    <script src="resources/bootstrap-5.2.3/js/bootstrap.bundle.js"></script>
+    <script src="/resources/bootstrap-5.2.3/js/bootstrap.bundle.js"></script>
     <!-- Fontawesome Js Plug-in -->
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/07941f149f.js"></script>
     <!-- DateRangePicker Library -->
-    <script src="resources/daterangepicker/moment.min.js" type="text/javascript"></script>
-    <script src="resources/daterangepicker/daterangepicker.js" type="text/javascript"></script>
-    <link href="resources/daterangepicker/daterangepicker.css" rel="stylesheet" type="text/css"/>
+    <script src="/resources/daterangepicker/moment.min.js" type="text/javascript"></script>
+    <script src="/resources/daterangepicker/daterangepicker.js" type="text/javascript"></script>
+    <link href="/resources/daterangepicker/daterangepicker.css" rel="stylesheet" type="text/css"/>
     <!-- Chosen Library-->
-    <script src="resources/chosen-1.8.7/chosen.jquery.min.js" type="text/javascript"></script>
-    <link href="resources/chosen-1.8.7/chosen.min.css" rel="stylesheet" type="text/css">
+    <script src="/resources/chosen-1.8.7/chosen.jquery.min.js" type="text/javascript"></script>
+    <link href="/resources/chosen-1.8.7/chosen.min.css" rel="stylesheet" type="text/css">
     <!-- Custom CSS File-->
-    <link href="resources/css/customCRM.css" rel="stylesheet">
+    <link href="/resources/css/customCRM.css" rel="stylesheet">
 </head>
 <body>
 <!-- Nav Bar Start -->
@@ -319,8 +319,8 @@
 <!-- OffCanvas for New Inquiry End -->
 
 
-<script src="resources/js/external-validator.js" type="text/javascript"></script>
-<script src="resources/js/CRM/inquiries.js" type="text/javascript"></script>
+<script src="/resources/js/external-validator.js" type="text/javascript"></script>
+<script src="/resources/js/CRM/inquiries.js" type="text/javascript"></script>
 
 </body>
 </html>
