new images added

--- a/system/src/main/resources/templates/index.html
+++ b/system/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                 </a>
-                <p class="text-uppercase fw-bold mt-1 small">new registrations</p>
+                <p class="text-uppercase fw-bold mt-1 small">student management</p>
 
             </div>
         </div>
