--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -320,6 +320,7 @@
 
 
 <script src="/resources/js/external-validator.js" type="text/javascript"></script>
+<script src="/resources/js/"
 <script src="/resources/js/CRM/inquiries.js" type="text/javascript"></script>
 
 </body>
