--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -143,7 +143,7 @@
         </div>
         <div class="card-footer pt-4 pb-4 overflow-auto">
             <h4 class="text-center fw-bold" style="font-family: Arial,serif;text-transform: uppercase;font-size: medium">Search Inquiry Info / <small class="text-muted">No records</small></h4>
-            <table class="custom-table">
+            <table class="custom-table" id="tblInquiry">
                 <thead>
                 <tr>
                     <th>ID</th>
@@ -320,7 +320,7 @@
 
 
 <script src="/resources/js/external-validator.js" type="text/javascript"></script>
-<script src="/resources/js/"
+<script src="/resources/js/external-table.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/inquiries.js" type="text/javascript"></script>
 
 </body>
