--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -318,6 +318,202 @@
 </div>
 <!-- OffCanvas for New Inquiry End -->
 
+<!-- OffCanvas for Inquiry Sheet Start -->
+<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static" id="offcanvasInquirySheet" tabindex="-1">
+    <div class="offcanvas-header bg-light">
+        <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas" type="button"><i class="fas fa-times"></i></button>
+        <div class="container d-flex gap-3" style="width: 65%">
+            <button aria-controls="collapseFollowUp" aria-expanded="false" class="btn btn-sm bg-purple rounded-0 text-white" data-bs-target="#collapseFollowUp" data-bs-toggle="collapse"><i
+                    class="fas fa-plus"></i> Follow-Up
+            </button>
+            <div class="dropdown">
+                <button aria-expanded="false" class="btn btn-sm bg-purple rounded-0 text-white dropdown-toggle" data-bs-toggle="dropdown" type="button">
+                    Mark As
+                </button>
+                <ul class="dropdown-menu rounded-0">
+                    <li><a class="dropdown-item text-success" data-bs-target="#modalRegistered" data-bs-toggle="modal" onclick="sucess()"><i class="fa-solid fa-thumbs-up"></i> Registered</a></li>
+                    <li><a class="dropdown-item text-danger mt-2" data-bs-target="#modalDropped" data-bs-toggle="modal"><i class="fa-solid fa-thumbs-down"></i> Dropped</a></li>
+                </ul>
+            </div>
+            <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit Info</button>
+        </div>
+        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Inquiry Sheet <span>#40002</span></h3>
+    </div>
+    <!-- Collapse for Follow-up Start -->
+    <div class="collapse container mt-2" id="collapseFollowUp">
+        <div class="card rounded-0">
+            <div class="card-header pb-0 bg-purple opacity-75 rounded-0">
+                <h3 class="text-white" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Add Follow Up</h3>
+            </div>
+            <div class="card-body bg-light rounded-0">
+                <form onsubmit="return false">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="mb-3">
+                                <div class="form-label">
+                                    <label class="fw-bold required small" for="inquiryFollowUpType">Type</label>
+                                </div>
+                                <div class="input-group">
+                                    <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Type  " id="inquiryFollowUpType" required>
+                                        <option value=""></option>
+                                        <option>Generic Update</option>
+                                        <option>Phone Call</option>
+                                        <option>WhatsApp</option>
+                                        <option>Email</option>
+                                        <option>Text</option>
+                                    </select>
+                                </div>
+                                <div class="text-muted small"><small>How did you follow up the inquiry?</small></div>
+                            </div>
+                            <div class="mb-3">
+                                <div class="form-label">
+                                    <label class="fw-bold required small" for="inquiryFollowUpContent">Content</label>
+                                </div>
+                                <textarea class="rounded-0 form-control" cols="80" id="inquiryFollowUpContent" required rows="4"></textarea>
+                                <div class="text-muted small"><small>Summary of the Customer Feedback.</small></div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="mb-2">
+                                <div class="form-label">
+                                    <label class="fw-bold required small">Feeling</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="inquiryFollowUpFeelingPositive" name="inquiryFollowUpFeeling" type="radio" value="positive">
+                                    <label class="form-check-label small" for="inquiryFollowUpFeelingPositive">Positive</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input checked class="form-check-input" id="inquiryFollowUpFeelingNeutral" name="inquiryFollowUpFeeling" type="radio" value="neutral">
+                                    <label class="form-check-label small" for="inquiryFollowUpFeelingNeutral">Neutral</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="inquiryFollowUpFeelingNegative" name="inquiryFollowUpFeeling" type="radio" value="negative">
+                                    <label class="form-check-label small" for="inquiryFollowUpFeelingNegative">Negative</label>
+                                </div>
+                                <div class="text-muted small"><small>How did you feel regarding converting this lead to a successful registration?</small></div>
+                            </div>
+                            <div class="mb-2">
+                                <div class="form-label">
+                                    <label class="fw-bold required small" for="inquiryFollowUpConfirm">Did the customer confirmed to register?</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="inquiryFollowUpConfirmYes" name="inquiryFollowUpConfirm" type="radio" value="Yes">
+                                    <label class="form-check-label" for="inquiryFollowUpConfirmYes">Yes</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input checked class="form-check-input" id="inquiryFollowUpConfirmNo" name="inquiryFollowUpConfirm" type="radio" value="No">
+                                    <label class="form-check-label" for="inquiryFollowUpConfirmNo">No</label>
+                                </div>
+                            </div>
+                            <div class="mb-2">
+                                <div class="form-label">
+                                    <label class="fw-bold required small" for="inquiryFollowUpTime">Convenient Time To Contact</label>
+                                </div>
+                                <input class="form-control rounded-0" id="inquiryFollowUpTime" required>
+                                <div class="text-muted small"><small>When do you want to contact this customer again?</small></div>
+                            </div>
+                        </div>
+                        <div class="w-100 ">
+                            <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="inquiryFollowUpConfirm" type="submit">Add Follow-Up</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Collapse for Follow-up End -->
+    <div class="offcanvas-body">
+
+        <table class="table table-bordered table-responsive ">
+            <tbody class="small align-middle">
+            <tr>
+                <td class="fw-bold w-25">Course</td>
+                <td class="w-25">
+                    <input class="small rounded-0 form-control-sm border-0" readonly value="Diploma in IT">
+                </td>
+                <td class="fw-bold w-25">Source</td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Personal Contact"></td>
+            </tr>
+            <tr>
+                <td class="fw-bold w-25">First Name</td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="Kasun"></td>
+                <td class="fw-bold w-25">Last Name</td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Malhara"></td>
+            </tr>
+            <tr>
+                <td class="fw-bold w-25">Phone Number</td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="0781011144"></td>
+                <td class="fw-bold w-25">Email</td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="eamalindu@gmail.com"></td>
+            </tr>
+            <tr>
+                <td class="fw-bold w-25">Optional Number</td>
+                <td class="w-25"></td>
+                <td class="fw-bold w-25">NIC</td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="983151108V"></td>
+            </tr>
+            <tr>
+                <td class="fw-bold w-25">Convenient Time To Contact</td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="2023-10-26 at 00:00"></td>
+                <td class="fw-bold w-25">Description</td>
+                <td>blah</td>
+            </tr>
+            </tbody>
+        </table>
+
+        <div class="btn btn-sm bg-purple text-white rounded-0 mb-2">Follow Ups</div>
+        <!-- List out follow-ups From the database-->
+        <div class="card rounded-0 mb-2">
+            <div class="card-body rounded-0">
+                <div class="row">
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-calendar-day"></i>
+                        2023-10-15
+                    </div>
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-clock"></i>
+                        09:00 AM
+                    </div>
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-user"></i>
+                        User1
+                    </div>
+                    <br/>
+                    <p class="small card-text">Sent details via WhatsApp will register for HND Sep intake</p>
+                </div>
+            </div>
+        </div>
+        <div class="card rounded-0 mb-2">
+            <div class="card-body rounded-0">
+                <div class="row">
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-calendar-day"></i>
+                        2023-10-15
+                    </div>
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-clock"></i>
+                        09:00 AM
+                    </div>
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-user"></i>
+                        User1
+                    </div>
+                    <br/>
+                    <p class="small card-text">Sent details via WhatsApp will register for HND Sep intake</p>
+                </div>
+            </div>
+        </div>
+        <div class="card rounded-0 mb-2">
+            <div class="card-body rounded-0">
+                <div class="row">
+                    <br/>
+                    <p class="small card-text text-purple">No Follow-Ups Found!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- OffCanvas for Inquiry Sheet End -->
 
 <script src="/resources/js/external-validator.js" type="text/javascript"></script>
 <script src="/resources/js/external-table.js" type="text/javascript"></script>
