--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -432,7 +432,7 @@
                     <input class="small rounded-0 form-control-sm border-0" readonly value="Diploma in IT" id="inquirySheetCourse">
                 </td>
                 <td class="fw-bold w-25">Source</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Personal Contact" is="inquirySheetSource"></td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Personal Contact" id="inquirySheetSource"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">First Name</td>
