--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -456,7 +456,7 @@
                 <td class="fw-bold w-25">Convenient Time To Contact</td>
                 <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="2023-10-26 at 00:00" id="inquirySheetNextFollowUp"></td>
                 <td class="fw-bold w-25">Description</td>
-                <td><textarea class="small rounded-0 form-control-sm border-0" id=""></textarea></td>
+                <td><textarea class="small rounded-0 form-control-sm border-0" id="inquirySheetDescription"></textarea></td>
             </tr>
             </tbody>
         </table>
