--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -448,7 +448,7 @@
             </tr>
             <tr>
                 <td class="fw-bold w-25">Optional Number</td>
-                <td class="w-25"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="0781011144" id="inquirySheetSecondaryMobile"></td>
                 <td class="fw-bold w-25">NIC</td>
                 <td><input class="small rounded-0 form-control-sm border-0" readonly value="983151108V" id="inquirySheetIdValue"></td>
             </tr>
