--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -142,7 +142,7 @@
             </form>
         </div>
         <div class="card-footer pt-4 pb-4 overflow-auto">
-            <h4 class="text-center fw-bold" style="font-family: Arial,serif;text-transform: uppercase;font-size: medium">Search Inquiry Info / <small class="text-muted">No records</small></h4>
+           <!-- <h4 class="text-center fw-bold" style="font-family: Arial,serif;text-transform: uppercase;font-size: medium">Search Inquiry Info / <small class="text-muted">No records</small></h4> -->
             <table class="custom-table" id="tblInquiry">
                 <thead>
                 <tr>
