--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -598,7 +598,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
 <script src="/resources/js/external-validator.js" type="text/javascript"></script>
-<script src="dashboard.js" type="text/javascript"></script>
+<script src="/resources/js/CRM/dashboard.js" type="text/javascript"></script>
 <script>
     const sucess = ()=> {
         confetti({
