table id added for inquiry pool

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -181,7 +181,7 @@
                 <h5 class="fs-4 fw-bold text-uppercase" style=" font-family: Arial, serif;">Inquiry Pool<span class="text-success float-end small text-capitalize">Low Priority</span></h5>
             </div>
             <div class="card-body">
-                <table class="table table-sm small text-center ">
+                <table class="table table-sm small text-center" id="tblInquiryPool">
                     <thead class="table-group-divider bg-purple text-white">
                     <tr>
                         <th>ID</th>
