added a id for Scheduled table

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -91,7 +91,7 @@
                 <h5 class="fs-4 fw-bold text-uppercase" style=" font-family: Arial, serif;">Scheduled Follow-Ups<span class="text-danger float-end small text-capitalize">High Priority</span></h5>
             </div>
             <div class="card-body">
-                <table class="table table-sm small text-center">
+                <table class="table table-sm small text-center custom-table" id="tblScheduledPool">
                     <thead class="table-group-divider bg-purple text-white">
                     <tr>
                         <th>ID</th>
