--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -329,7 +329,7 @@
 <!-- OffCanvas for New Inquiry End -->
 
 <!-- OffCanvas for Inquiry Sheet Start -->
-<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static" id="offcanvasInquirySheet" tabindex="-1">
+<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static" id="offcanvasDeafult" tabindex="-1">
     <div class="offcanvas-header bg-light">
         <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas" type="button"><i class="fas fa-times"></i></button>
         <div class="container d-flex gap-3" style="width: 65%">
