--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -341,7 +341,7 @@
                     Mark As
                 </button>
                 <ul class="dropdown-menu rounded-0">
-                    <li><a class="dropdown-item text-success" data-bs-target="#modalRegistered" data-bs-toggle="modal" onclick="sucess()"><i class="fa-solid fa-thumbs-up"></i> Registered</a></li>
+                    <li><a class="dropdown-item text-success" data-bs-target="#modalRegistered" data-bs-toggle="modal" onclick="success()"><i class="fa-solid fa-thumbs-up"></i> Registered</a></li>
                     <li><a class="dropdown-item text-danger mt-2" data-bs-target="#modalDropped" data-bs-toggle="modal"><i class="fa-solid fa-thumbs-down"></i> Dropped</a></li>
                 </ul>
             </div>
@@ -603,7 +603,7 @@
 <script src="/resources/js/external-table.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/dashboard.js" type="text/javascript"></script>
 <script>
-    const sucess = ()=> {
+    const success = ()=> {
         confetti({
             particleCount: 400,
             spread: 70,
