--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -331,7 +331,7 @@
                     Mark As
                 </button>
                 <ul class="dropdown-menu rounded-0">
-                    <li><a class="dropdown-item text-success" data-bs-target="#modalRegistered" data-bs-toggle="modal" onclick="sucess()"><i class="fa-solid fa-thumbs-up"></i> Registered</a></li>
+                    <li><a class="dropdown-item text-success" data-bs-target="#modalRegistered" data-bs-toggle="modal" onclick="success()"><i class="fa-solid fa-thumbs-up"></i> Registered</a></li>
                     <li><a class="dropdown-item text-danger mt-2" data-bs-target="#modalDropped" data-bs-toggle="modal"><i class="fa-solid fa-thumbs-down"></i> Dropped</a></li>
                 </ul>
             </div>
