--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -43,7 +43,7 @@
             </ul>
             <!-- Navbar Right side -->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Inquiries.html">Inquiries</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Inquiry">Inquiries</a></li>
                 <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules.html">Schedules</a></li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Reports</button>
