--- a/system/src/main/resources/templates/crm/Reports-All.html
+++ b/system/src/main/resources/templates/crm/Reports-All.html
@@ -5,30 +5,30 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
     <title>Reports | STEAM CRM</title>
     <!-- Favicon Icon -->
-    <link href="resources/images/icon-sq.png" rel="icon" type="image/png">
+    <link href="/resources/images/icon-sq.png" rel="icon" type="image/png">
     <!-- Bootstrap CSS File-->
-    <link href="resources/bootstrap-5.2.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/resources/bootstrap-5.2.3/css/bootstrap.min.css" rel="stylesheet">
     <!-- Jquery Js File -->
-    <script src="resources/Jquery/jquery.min.js"></script>
+    <script src="/resources/Jquery/jquery.min.js"></script>
     <!-- Boostrap Js File -->
-    <script src="resources/bootstrap-5.2.3/js/bootstrap.bundle.js"></script>
+    <script src="/resources/bootstrap-5.2.3/js/bootstrap.bundle.js"></script>
     <!-- Fontawesome Js Plug-in -->
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/07941f149f.js"></script>
     <!-- DateRangePicker Library -->
-    <script src="resources/daterangepicker/moment.min.js" type="text/javascript"></script>
-    <script src="resources/daterangepicker/daterangepicker.js" type="text/javascript"></script>
-    <link href="resources/daterangepicker/daterangepicker.css" rel="stylesheet" type="text/css"/>
+    <script src="/resources/daterangepicker/moment.min.js" type="text/javascript"></script>
+    <script src="/resources/daterangepicker/daterangepicker.js" type="text/javascript"></script>
+    <link href="/resources/daterangepicker/daterangepicker.css" rel="stylesheet" type="text/css"/>
     <!-- Chosen Library-->
-    <script src="resources/chosen-1.8.7/chosen.jquery.min.js" type="text/javascript"></script>
-    <link href="resources/chosen-1.8.7/chosen.min.css" rel="stylesheet" type="text/css">
+    <script src="/resources/chosen-1.8.7/chosen.jquery.min.js" type="text/javascript"></script>
+    <link href="/resources/chosen-1.8.7/chosen.min.css" rel="stylesheet" type="text/css">
     <!-- Custom CSS File-->
-    <link href="resources/css/custom.css" rel="stylesheet">
+    <link href="/resources/css/customCRM.css" rel="stylesheet">
 </head>
 <body>
 <!-- Nav Bar Start -->
 <nav class="navbar navbar-expand-lg bg-purple p-1">
     <div class="container-fluid">
-        <a class="navbar-brand text-white" href="Dashboard.html"><strong>CRM</strong> : : STEAM</a>
+        <a class="navbar-brand text-white" href="Dashboard"><strong>CRM</strong> : : STEAM</a>
         <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarText" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon" style="filter: invert(100%)"></span>
         </button>
@@ -43,7 +43,7 @@
             </ul>
             <!-- Navbar Right side -->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Inquiries.html">Inquiries</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Inquiry">Inquiries</a></li>
                 <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules.html">Schedules</a></li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0 custom-active" data-bs-toggle="dropdown">Reports</button>
