--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -319,7 +319,7 @@
                         <div class="text-muted small"><small> a short description which will be useful for the counsellor who will be handling this inquiry</small></div>
                     </div>
                     <div class="mb-2">
-                        <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="inquiryConfirm" type="submit">Confirm</button>
+                        <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="inquiryConfirm" onclick="newInquirySubmit()" type="submit">Confirm</button>
                     </div>
                 </form>
             </div>
