--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -266,31 +266,31 @@
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryFirstName">First Name</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryFirstName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$')" required type="text">
+                        <input class="form-control rounded-0" id="inquiryFirstName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','newInquiry','firstName')" required type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryLastName">Last Name</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryLastName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$')" required type="text">
+                        <input class="form-control rounded-0" id="inquiryLastName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','newInquiry','lastName')" required type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label small">
                             <label class="fw-bold required" for="inquiryMobileNumber">Mobile Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryMobileNumber" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$')" required type="text">
+                        <input class="form-control rounded-0" id="inquiryMobileNumber" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','primaryMobileNumber')" required type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label small">
                             <label class="fw-bold" for="inquiryAdditionalMobileNumber">Additional Mobile Number</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryAdditionalMobileNumber" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$')" placeholder="Optional" type="text">
+                        <input class="form-control rounded-0" id="inquiryAdditionalMobileNumber" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','secondaryMobileNumber')" placeholder="Optional" type="text">
                     </div>
                     <div class="mb-2">
                         <div class="form-label small">
                             <label class="fw-bold" for="inquiryEmail">Email</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryEmail" onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$')" placeholder="Optional"
+                        <input class="form-control rounded-0" id="inquiryEmail" onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','newInquiry','email')" placeholder="Optional"
                                type="text">
                     </div>
                     <div class="mb-2">
@@ -302,14 +302,14 @@
                                 <option value="1">NIC</option>
                                 <option value="2">Postal</option>
                             </select>
-                            <input class="form-control rounded-0" id="inquiryID" onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$')" required>
+                            <input class="form-control rounded-0" id="inquiryID" onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','newInquiry','idValue')" required>
                         </div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryTime">Convenient Time To Contact</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryTime" onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][a][t][ ][0-9]{2}[:][0-9]{2}$')" required>
+                        <input class="form-control rounded-0" id="inquiryTime" onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][a][t][ ][0-9]{2}[:][0-9]{2}$','newInquiry','contactTime')" required>
                     </div>
                     <div class="mb-3">
                         <div class="form-label">
