--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -233,7 +233,7 @@
                             <label class="fw-bold required small" for="inquirySource">Source</label>
                         </div>
                         <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Source" id="inquirySource" required>
+                            <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Source" id="inquirySource" required onchange="selectDynamicValueValidator(this,'','newInquiry','sourceId')">
                                 <option value=""></option>
                                 <option value="Cold Calling">Cold Calling</option>
                                 <option value="Facebook">Facebook</option>
@@ -253,7 +253,7 @@
                             <label class="fw-bold required small" for="inquiryCourse">Course</label>
                         </div>
                         <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Course" id="inquiryCourse" required>
+                            <select class="form-select rounded-0 chosen-inquiry" data-placeholder="Please Select a Course" id="inquiryCourse" required onchange="selectDynamicValueValidator(this,'','newInquiry','courseId')">
                                 <option value=""></option>
                                 <option>Diploma in IT</option>
                                 <option>Diploma in English</option>
@@ -316,7 +316,7 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryDescription">Description</label>
                         </div>
-                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription" required rows="4"></textarea>
+                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription" required rows="4" onkeyup="inputTextValidator(this,'','newInquiry','description')"></textarea>
                         <div class="text-muted small"><small> a short description which will be useful for the counsellor who will be handling this inquiry</small></div>
                     </div>
                     <div class="mb-2">
