--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -298,7 +298,7 @@
                             <label class="fw-semibold required small" for="inquiryIdOption">NIC / Postal ID</label>
                         </div>
                         <div class="input-group">
-                            <select class="form-select bg-light rounded-0 custom-width-max-content" id="inquiryIdOption" onchange="selectStaticValueValidator(this,'','newInquiry','idType')">
+                            <select class="form-select bg-light rounded-0 custom-width-max-content" id="inquiryIdOption" onchange="selectStaticValueValidator(this,'','newInquiry','idType')" required>
                                 <option value="" selected disabled>Please Select</option>
                                 <option value="NIC">NIC</option>
                                 <option value="POSTAL">Postal</option>
