--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -43,7 +43,7 @@
             </ul>
             <!-- Navbar Right side -->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Inquiry">Inquiries</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Inquiries">Inquiries</a></li>
                 <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules.html">Schedules</a></li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Reports</button>
@@ -299,7 +299,7 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryTime">Convenient Time To Contact</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryTime" onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][a][t][ ][0-9]{2}[:][0-9]{2}$')" required>
+                        <input class="form-control rounded-0" id="inquiryTime" onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][a][t][ ][0-9]{2}[:][0-9]{2}$','newInquiry','contactTime')" required>
                     </div>
                     <div class="mb-3">
                         <div class="form-label">
