--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -316,7 +316,7 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryDescription">Description</label>
                         </div>
-                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription" required rows="4" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s]{20,}$','newInquiry','description')"></textarea>
+                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription" required rows="4" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')"></textarea>
                         <div class="text-muted small"><small> a short description which will be useful for the counsellor who will be handling this inquiry</small></div>
                     </div>
                     <div class="mb-2">
