--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -517,6 +517,7 @@
 <!-- OffCanvas for Inquiry Sheet End -->
 
 <script src="/resources/js/external-validator.js" type="text/javascript"></script>
+<script src="/resources/js/external-commonFunction.js" type="text/javascript"></script>
 <script src="/resources/js/external-table.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/newInquiry.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/inquiries.js" type="text/javascript"></script>
