--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -604,6 +604,7 @@
 <script src="/resources/js/external-commonFunction.js" type="text/javascript"></script>
 <script src="/resources/js/external-table.js" type="text/javascript"></script>
 <script src="/resources/js/external-modalFunction.js" type="text/javascript"></script>
+<script src="/resources/js/CRM/newInquiry.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/dashboard.js" type="text/javascript"></script>
 <script>
     const success = ()=> {
