--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -310,7 +310,7 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryTime">Convenient Time To Contact</label>
                         </div>
-                        <input class="form-control rounded-0" id="inquiryTime" onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][a][t][ ][0-9]{2}[:][0-9]{2}$','newInquiry','contactTime')" required>
+                        <input class="form-control rounded-0" id="inquiryTime" onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newInquiry','contactTime')" required>
                     </div>
                     <div class="mb-3">
                         <div class="form-label">
