--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -519,6 +519,7 @@
 <script src="/resources/js/external-validator.js" type="text/javascript"></script>
 <script src="/resources/js/external-commonFunction.js" type="text/javascript"></script>
 <script src="/resources/js/external-table.js" type="text/javascript"></script>
+<script src="/resources/js/external-modalFunction.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/newInquiry.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/inquiries.js" type="text/javascript"></script>
 
