span id changed

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -348,7 +348,7 @@
             </div>
             <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit Info</button>
         </div>
-        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Inquiry Sheet <span>#40002</span></h3>
+        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Inquiry Sheet <span id="inquirySheetId">#40002</span></h3>
     </div>
     <!-- Collapse for Follow-up Start -->
     <div class="collapse container mt-2" id="collapseFollowUp">
