id added for rowEdit function

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -440,34 +440,34 @@
             <tr>
                 <td class="fw-bold w-25">Course</td>
                 <td class="w-25">
-                    <input class="small rounded-0 form-control-sm border-0" readonly value="Diploma in IT">
+                    <input class="small rounded-0 form-control-sm border-0" readonly value="Diploma in IT" id="inquirySheetCourse">
                 </td>
                 <td class="fw-bold w-25">Source</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Personal Contact"></td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Personal Contact" id="inquirySheetSource"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">First Name</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="Kasun"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="Kasun" id="inquirySheetFirstName"></td>
                 <td class="fw-bold w-25">Last Name</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Malhara"></td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Malhara" id="inquirySheetLastName"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Phone Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="0781011144"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="0781011144" id="inquirySheetPrimaryMobile"></td>
                 <td class="fw-bold w-25">Email</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="eamalindu@gmail.com"></td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="eamalindu@gmail.com" id="inquirySheetEmail"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Optional Number</td>
-                <td class="w-25"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="0781011144" id="inquirySheetSecondaryMobile"></td>
                 <td class="fw-bold w-25">NIC</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="983151108V"></td>
+                <td><input class="small rounded-0 form-control-sm border-0" readonly value="983151108V" id="inquirySheetIdValue"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Convenient Time To Contact</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="2023-10-26 at 00:00"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="2023-10-26 at 00:00" id="inquirySheetNextFollowUp"></td>
                 <td class="fw-bold w-25">Description</td>
-                <td>blah</td>
+                <td><textarea class="small rounded-0 form-control-sm border-0" id="inquirySheetDescription"></textarea></td>
             </tr>
             </tbody>
         </table>
