# added before the span element

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -348,7 +348,7 @@
             </div>
             <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit Info</button>
         </div>
-        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Inquiry Sheet <span id="inquirySheetId">#40002</span></h3>
+        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Inquiry Sheet #<span id="inquirySheetId">40002</span></h3>
     </div>
     <!-- Collapse for Follow-up Start -->
     <div class="collapse container mt-2" id="collapseFollowUp">
@@ -474,46 +474,6 @@
 
         <div class="btn btn-sm bg-purple text-white rounded-0 mb-2">Follow Ups</div>
         <!-- List out follow-ups From the database-->
-        <div class="card rounded-0 mb-2">
-            <div class="card-body rounded-0">
-                <div class="row">
-                    <div class="col-auto text-purple small">
-                        <i class="fa-solid fa-calendar-day"></i>
-                        2023-10-15
-                    </div>
-                    <div class="col-auto text-purple small">
-                        <i class="fa-solid fa-clock"></i>
-                        09:00 AM
-                    </div>
-                    <div class="col-auto text-purple small">
-                        <i class="fa-solid fa-user"></i>
-                        User1
-                    </div>
-                    <br/>
-                    <p class="small card-text">Sent details via WhatsApp will register for HND Sep intake</p>
-                </div>
-            </div>
-        </div>
-        <div class="card rounded-0 mb-2">
-            <div class="card-body rounded-0">
-                <div class="row">
-                    <div class="col-auto text-purple small">
-                        <i class="fa-solid fa-calendar-day"></i>
-                        2023-10-15
-                    </div>
-                    <div class="col-auto text-purple small">
-                        <i class="fa-solid fa-clock"></i>
-                        09:00 AM
-                    </div>
-                    <div class="col-auto text-purple small">
-                        <i class="fa-solid fa-user"></i>
-                        User1
-                    </div>
-                    <br/>
-                    <p class="small card-text">Sent details via WhatsApp will register for HND Sep intake</p>
-                </div>
-            </div>
-        </div>
         <div class="card rounded-0 mb-2">
             <div class="card-body rounded-0">
                 <div class="row">
