--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -472,6 +472,8 @@
             </tbody>
         </table>
 
+        <!-- Show Added-by and added time of the inquiry here-->
+
         <div class="btn btn-sm bg-purple text-white rounded-0 mb-2">Follow Ups</div>
         <!-- List out follow-ups From the database-->
         <div class="card rounded-0 mb-2">
