--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -471,8 +471,26 @@
             </tr>
             </tbody>
         </table>
-
         <!-- Show Added-by and added time of the inquiry here-->
+        <div class="btn btn-sm bg-purple text-white rounded-0 mb-2">Info</div>
+        <div class="card rounded-0 mb-2">
+            <div class="card-body rounded-0">
+                <div class="row">
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-calendar-day"></i>
+
+                    </div>
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-clock"></i>
+
+                    </div>
+                    <div class="col-auto text-purple small">
+                        <i class="fa-solid fa-user"></i>
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="btn btn-sm bg-purple text-white rounded-0 mb-2">Follow Ups</div>
         <!-- List out follow-ups From the database-->
