--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -478,15 +478,15 @@
                 <div class="row">
                     <div class="col-auto text-purple small">
                         <i class="fa-solid fa-calendar-day"></i>
-
+                        <span id="inquirySheetAddedDate"></span>
                     </div>
                     <div class="col-auto text-purple small">
                         <i class="fa-solid fa-clock"></i>
-
+                        <span id="inquirySheetAddedTime"></span>
                     </div>
                     <div class="col-auto text-purple small">
                         <i class="fa-solid fa-user"></i>
-
+                        <span id="inquirySheetAddedBy"></span>
                     </div>
                 </div>
             </div>
