inquiry basic info section added

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -511,7 +511,7 @@
     <!-- Collapse for Follow-up End -->
     <div class="offcanvas-body">
 
-        <table class="table table-bordered table-responsive ">
+        <table class="table table-bordered table-responsive mb-2">
             <tbody class="small align-middle">
             <tr>
                 <td class="fw-bold w-25">Course</td>
@@ -557,11 +557,10 @@
             </tr>
             </tbody>
         </table>
-        <!-- Show Added-by and added time of the inquiry here
-        <div class="btn btn-sm bg-purple text-white rounded-0 mb-2">Info</div>-->
-        <div class="card rounded-0 mb-3">
-            <div class="card-body rounded-0">
-                <p>This Inquiry was Created by <span class="fw-bold" id="inquirySheetAddedBy"></span> on <span class="fw-bold" id="inquirySheetAddedDate"></span> at
+        <!-- Show Added-by and added time of the inquiry here -->
+        <div class="card rounded-0 mb-2">
+            <div class="card-body rounded-0 pb-0">
+                <p class="small text-muted text-center">This Inquiry was Created by <span class="fw-bold" id="inquirySheetAddedBy"></span> on <span class="fw-bold" id="inquirySheetAddedDate"></span> at
                     <span class="fw-bold" id="inquirySheetAddedTime"></span>.</p>
             </div>
         </div>
