search filters changed

--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -112,16 +112,11 @@
                                 <option>Certificate in IT</option>
                                 <option>Certificate in English</option>
                             </select>
-                            <select class="form-select rounded-0 chosen-inquiry-search" data-placeholder="Sort by a Feeling" id="inquirySearchFeeling">
+                            <select class="form-select rounded-0 chosen-inquiry-search" data-placeholder="Sort by a Counsellor" id="inquirySearchFeeling">
                                 <option value=""></option>
-                                <option>Positive</option>
-                                <option>Neutral</option>
-                                <option>Negative</option>
-                            </select>
-                            <select class="form-select rounded-0 chosen-inquiry-search" data-placeholder="Confirmed ?" id="inquirySearchRegistrationConfirmed">
-                                <option value=""></option>
-                                <option>Yes</option>
-                                <option>No</option>
+                                <option>User 1</option>
+                                <option>User 2</option>
+                                <option>User 3</option>
                             </select>
 
                         </div>
