--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -333,7 +333,7 @@
             </div>
             <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit Info</button>
         </div>
-        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Inquiry Sheet #0000<span id="inquirySheetId">40002</span></h3>
+        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Inquiry Sheet #<span id="inquirySheetId">40002</span></h3>
     </div>
     <!-- Collapse for Follow-up Start -->
     <div class="collapse container mt-2" id="collapseFollowUp">
@@ -456,7 +456,13 @@
             </tr>
             </tbody>
         </table>
-
+        <!-- Show Added-by and added time of the inquiry here -->
+        <div class="card rounded-0 mb-2">
+            <div class="card-body rounded-0 pb-0">
+                <p class="small text-muted text-center">This Inquiry was Created by <span class="fw-bold" id="inquirySheetAddedBy"></span> on <span class="fw-bold" id="inquirySheetAddedDate"></span> at
+                    <span class="fw-bold" id="inquirySheetAddedTime"></span>.</p>
+            </div>
+        </div>
         <div class="btn btn-sm bg-purple text-white rounded-0 mb-2">Follow Ups</div>
         <!-- List out follow-ups From the database-->
         <div class="card rounded-0 mb-2">
