inquiry sheet tabled added mb-2

--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -420,7 +420,7 @@
     <!-- Collapse for Follow-up End -->
     <div class="offcanvas-body">
 
-        <table class="table table-bordered table-responsive ">
+        <table class="table table-bordered table-responsive mb-2">
             <tbody class="small align-middle">
             <tr>
                 <td class="fw-bold w-25">Course</td>
