id changed for search filters

--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -112,7 +112,7 @@
                                 <option>Certificate in IT</option>
                                 <option>Certificate in English</option>
                             </select>
-                            <select class="form-select rounded-0 chosen-inquiry-search" data-placeholder="Sort by a Counsellor" id="inquirySearchFeeling">
+                            <select class="form-select rounded-0 chosen-inquiry-search" data-placeholder="Sort by a Counsellor" id="inquirySearchCounsellor">
                                 <option value=""></option>
                                 <option>User 1</option>
                                 <option>User 2</option>
