frmNewInquiry id added

--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -212,7 +212,7 @@
     <div class="offcanvas-body">
         <div class="card border-0">
             <div class="card-body border-0">
-                <form onsubmit="return false">
+                <form onsubmit="return false" id="frmNewInquiry">
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquirySource">Source</label>
